--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
-	<title>TypoMorpho</title>
+	<title>Perrine Saint Martin</title>
 	
 	<!-- FAVICON -->
 	<link rel="icon" href="typo/favicon.ico" type="image/x-icon" />
